# TRUEOS

./: .apply_patch_smoketest  .gitignore  .gitmodules  86_64.json  99-trueos-usb.rules  Cargo.toml  LICENSE  Makefile  NOTICE  SKHYNIX_LUMEN_MONOPOLY_REVERT.md  THIRD_PARTY_NOTICES.md  TRUEOS-release-public-key.asc  TRUEOS-release-public-key.json  alloc_miss_patch.md  arm_Makefile  bootlog.txt  build.rs  build_log.txt  build_output.txt  cargo_check_output.txt  cargo_output.txt  cursor_lost_found.md  d  lc  libstring_trait_check.rlib  libsymphonia_map_check.rlib  libtest.rlib  limine-arm.conf  limine.conf  linker.ld  netboot.sh  new_makefile  pxe.js  pxe2.js  readme.md  rust-toolchain.toml  rustfmt.toml  sketch.ino  sketch_pinned.ino  smart_inversion_demo.html  (+3 more)
.cargo/: 86_64.json  (+5 more)
crates/amble/: .gitignore  Cargo.toml  DEVLOG.md  LICENSE  amble_map.drawio  rustfmt.toml
crates/amble/.zed/: settings.json  tasks.json
crates/amble/.zed/snippets/: amble.json
crates/amble/amble_data/: Cargo.toml  README.md
crates/amble/amble_data/src/: defs.rs  lib.rs  validate.rs
crates/amble/amble_engine/: .gitignore  Cargo.toml
crates/amble/amble_engine/data/: help_basic.txt  help_commands.toml  themes.toml  world.ron
crates/amble/amble_engine/docs/: README.md  THEME_SYSTEM.md  engine_notes.md  engine_overview.md
crates/amble/amble_engine/src/: command.rs  data_paths.rs  dev_command.rs  entity_search.rs  goal.rs  health.rs  helpers.rs  idgen.rs  ids.rs  item.rs  lib.rs  loader.rs  main.rs  markup.rs  npc.rs  player.rs  repl.rs  repl_grammar.pest  room.rs  save_files.rs  scheduler.rs  slug.rs  spinners.rs  style.rs  theme.rs  trigger.rs  view.rs  world.rs
crates/amble/amble_engine/tests/: basic.rs  schedule_conditional.rs
crates/amble/amble_script/: Cargo.toml  README.md
crates/amble/amble_script/docs/: dsl_cheat_sheet.md  dsl_creator_handbook.md  goals_dsl_guide.md  items_dsl_guide.md  npcs_dsl_guide.md  rooms_dsl_guide.md  spinners_dsl_guide.md  trigger_dsl_guide.md
crates/amble/amble_script/src/: grammar.pest  lib.rs  main.rs  worlddef.rs
crates/amble/docs/: README.md  dist_readme.md  zed_extension.md
crates/amble/xtask/: Cargo.toml  README.md
crates/amble/xtask/src/: main.rs
crates/quickjs-sys/: Cargo.toml  build.rs  trueos_stdio.c
crates/quickjs-sys/src/: lib.rs
crates/trueos-kibi/: Cargo.toml
crates/trueos-kibi/src/: ansi_escape.rs  config.rs  editor.rs  error.rs  lib.rs  main.rs  row.rs  syntax.rs  terminal.rs
crates/trueos-qjs/: Cargo.toml  RenderTreeAndLayoutLog.txt  build.rs
crates/trueos-qjs/app/: README.md  main.mjs  util.mjs
crates/trueos-qjs/app/ai/: ai.mjs  ai_file_adapter.mjs  ai_pc.mjs  ai_pc_cmd.mjs  ai_pc_runner.mjs  ai_shell_normal.mjs  ai_task.rs  openai_client.mjs
crates/trueos-qjs/app/browser/: ai_api.rs  browser.mjs  browser.rs  browser2.mjs  browser_ai_adapter.mjs  browser_assets.mjs  browser_bootstrap.mjs  browser_canvas.rs  browser_canvas_renderer.rs  browser_context.rs  browser_cursor.mjs  browser_navigator.rs  browser_page_state.mjs  browser_task.rs  browser_ui.mjs  browser_ui_hook.mjs  browser_webgpu.rs  cmd_backend.mjs  css.mjs  cssDefaults.mjs  default_theme.rs  fps.mjs  gui.mjs  helpers.rs  htmlDefaults.mjs  htmlDefaults.ts  html_defaults.mjs  icon.rs  index.mjs  input.html  input_html.mjs  layout.rs  lyon.rs  main.mjs  main.ts  page_pipeline.mjs  pixi_reuse.mjs  scene.mjs  scene.rs  svg.rs  (+8 more)
crates/trueos-qjs/app/cdn/: 2232fcf00ce9d149.mjs  5edb1473d4c4bc48.mjs  7bf03598e4e38f24.mjs  7d733849c687c975.mjs  8d2f5f0bba6a6702.mjs  d5ed74877b797c3b.mjs  e885ce03d8e64d3d.mjs  fde6b9a19a6f2d59.mjs  seedlist.txt  yoga-vendor-map.json
crates/trueos-qjs/app/dd/: driverdev.mjs
crates/trueos-qjs/app/font/: opent.mjs
crates/trueos-qjs/app/input/: keyboard_wire.mjs
crates/trueos-qjs/app/node/: buffer.mjs
crates/trueos-qjs/app/pixi/: bundle.mjs  gui.mjs  main.mjs  pixiReuse.mjs  pixi_gui.mjs  pixi_gui_esmsh.mjs  pixi_gui_jsdelivr.mjs  pixi_gui_unpkg.mjs
crates/trueos-qjs/app/sub/: rel.mjs
crates/trueos-qjs/app/truesurfer/: REV_page_pipeline.mjs  REV_theme.mjs  css.mjs  cssDefaults.mjs  diff_box.mjs  htmlDefaults.mjs  parry_reworkpls_needui2concept.mjs  theme.mjs  truesurfer.mjs  truesurfer_assets.mjs  truesurfer_extract.mjs  truesurfer_qjs_vm_task.rs  truesurfer_task.rs
crates/trueos-qjs/pixi/: cmd_stream_adapter.js  contracts.js
crates/trueos-qjs/src/: async_fs.rs  async_ops.rs  browser.rs  browser_input.rs  cmd_stream.rs  host_api_hook.rs  input.html  jsbind.rs  lib.rs  lightningcss_native.rs  lyon_native.rs  node.rs  parse5.mjs  platform.rs  qjs_diag.rs  stdio.c  timers.rs  trueos_module_loader.rs  trueos_modules.rs  trueos_shims.rs  trueos_smoke.rs  vm.rs  webgl.rs  webgl_core.rs  webgl_hotpath.rs  webgl_texture.rs  wgpu.rs  workers.rs  yoga_native.rs
crates/trueos-qjs/src/cmd_stream/: atlas_cmd_stream.rs  draw_cmd_stream.rs  lyon_cmd_stream.rs
crates/trueos-qjs/src/lightning/: lightningcss_native.rs
crates/trueos-qjs/src/loader/: compiled.rs  embedded.rs  mod.rs  trueos_module_loader.rs
crates/trueos-qjs/src/node/: events.mjs  mod.rs
crates/trueos-qjs/src/pixi/: browser_task.rs  hex.rs  mod.rs  pixi.mjs  pixi_capture_adapter.js  pixi_gui.rs  pixi_smoke.mjs  pixi_ui.rs  smoke.rs  webgl_smoke.rs
crates/trueos-qjs/src/rendertree/: layout.mjs  layout.ts  renderTheme.mjs  renderTheme.ts  renderToTree.mjs  renderTypes.mjs  renderTypes.ts
crates/trueos-qjs/src/svgjs/: README.md  index.mjs
crates/trueos-qjs/src/threejs/: mod.rs
crates/trueos-qjs/src/trueos_module_loader/: compiled.rs  embedded.rs  mod.rs  trueos_module_loader.rs
crates/trueos-v/: Cargo.toml  LICENSE-APACHE.template
crates/trueos-v/src/: alsa_compat.rs  borrow.rs  bp_abi.rs  collections.rs  env.rs  ffi.rs  fmt.rs  iter.rs  lib.rs  qjs_abi.rs  sync.rs  vaudio.rs  vcabi.rs  vclock.rs  vfetch.rs  vfs.rs  vgfx.rs  vhttp_srv.rs  vinput.rs  vio.rs  vmail.rs  vnet.rs  vnetfs.rs  vshell.rs  vsys.rs  vui2.rs
crates/trueos-weather/: Cargo.toml  api
crates/trueos-weather/src/: config.rs  demo.json  frog.rs  helper.rs  lang.rs  lib.rs  oc3.rs
(+2014 files in other folders)
