[package]
name = "TRUEOS"
version = "0.0.2"
edition = "2024"

[features]
default = []
hda-boot-probe = []
vmx-web = ["dep:axum", "hyper/server"]
vmx-reqwest = ["dep:reqwest"]

[dependencies]
x86_64 = { version = "0.15.4", default-features = false, features = ["instructions", "nightly"] }
core3 = { version = "0.1.2", default-features = false, features = ["alloc"] }
spin = "0.10"
embassy-executor = { version = "0.10.0", default-features = false, features = ["executor-thread", "platform-spin"] }
embassy-sync = { version = "0.8.0", default-features = false }
embassy-time = { version = "0.5.1", default-features = false, features = ["tick-hz-1_000"] }
embassy-time-driver = { version = "0.2.2", default-features = false }
embedded-io-async = { version = "0.7.0", default-features = false }
trueos-io = { path = "crates/trueos-io" }
heapless = { version = "0.9", default-features = false }
bytes = { version = "1.11.1", default-features = false }
limine = { version = "0.6", default-features = false }
acpi = { version = "6.1.1", default-features = false, features = ["alloc", "aml"] }
aml = { version = "0.16", default-features = false }
fontdue = { version = "0.9.3", default-features = false, features = ["hashbrown"] }
getrandom_02 = { package = "getrandom", version = "0.2", default-features = false, features = ["custom"] }
raw-cpuid = { version = "11", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
zeroize = { version = "1", default-features = false }
libm = { version = "0.2", default-features = false }
hashbrown = { version = "0.17.0", default-features = false }
memchr = { version = "2.8.0", default-features = false }
twoway = { version = "0.2", default-features = false }
unicode-segmentation = { version = "1", default-features = false }
unicode-normalization = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }
trueos-qjs = { path = "crates/trueos-qjs", features = ["trueos", "yoga-native"] }
trueos-gfx-core = { path = "crates/trueos-gfx-core", features = ["alloc"] }
trueos-eu = { path = "crates/trueos-eu" }
rustls = { version = "0.23", default-features = false, features = ["custom-provider", "tls12"] }
rustls-rustcrypto = { version = "0.0.2-alpha", default-features = false, features = ["alloc", "tls12", "zeroize"] }
webpki-roots = { version = "1.0.7", default-features = false }
miniz_oxide = { version = "0.9", default-features = false, features = ["with-alloc"] }
lzma-rust2 = { version = "0.16.2", default-features = false }
png = { version = "0.18.1", default-features = false }
zune-core = { version = "0.5.1", default-features = false }
zune-jpeg = { version = "0.5.15", default-features = false, features = ["x86", "portable_simd"] }
crc32fast = { version = "1.5.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
embedded-websocket = { version = "0.9.4", default-features = false }
smoltcp = { version = "0.13", default-features = false, features = ["alloc", "proto-ipv4", "proto-ipv6", "multicast", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "socket-dhcpv4", "medium-ethernet"] }
crab-usb = { version = "0.6.2", default-features = false }
dma-api = { version = "0.7.2", default-features = false }
trueos-math = { path = "crates/trueos-math", features = ["alloc"] }
trueos-fs = { path = "crates/trueos-fs" }
trueos-c4 = { path = "crates/trueos-c4" }
v = { path = "crates/trueos-v" }
trueos-vm = { path = "crates/trueos-vm" }
trueos-esp = { path = "crates/trueos-esp" }
trueos-chat = { path = "crates/trueos-chat" }
lyon_geom = { version = "1.0.19", default-features = false }
lyon_tessellation = { version = "1.0.20", default-features = false }
euclid = { version = "=0.22.13", default-features = false }
usvg = { version = "0.45.1", default-features = false }
kurbo = { version = "=0.11.3", default-features = false }
tiny-skia-path = { version = "0.11.4", default-features = false, features = ["no-std-float"] }
parry2d = { version = "0.26", default-features = false, features = ["dim2", "f32"] }
petgraph = { version = "0.8.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.52.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "net", "io-util", "io-std", "fs", "process", "signal", "test-util"] }
socket2 = { version = "0.6.3", default-features = false }
mio = { version = "1.2.0", default-features = false, features = ["os-poll", "net"] }
hyper = { version = "1.9.0", default-features = false, features = ["client", "http1"] }
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "tokio", "tower-log", "ws", "original-uri"], optional = true }
lumen = { path = "vendor/lumen", default-features = false, features = ["cpu-trueos"] }
tower = { version = "0.5.3", default-features = false, features = ["util"] }
reqwest = { version = "0.13.3", default-features = false, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
rdrand = { version = "0.8", default-features = false }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true
debug = false
opt-level = 2

[patch.crates-io]
libc = { path = "vendor/libc-0.2.185" }
png = { path = "vendor/png-0.18.1" }
fdeflate = { path = "vendor/fdeflate-0.3.7" }
simd-adler32 = { path = "vendor/simd-adler32-0.3.8" }
num-traits = { path = "vendor/num-traits-0.2.19" }
usvg = { path = "vendor/usvg-0.45.1" }
imagesize = { path = "vendor/imagesize-0.13.0" }
hyper = { path = "vendor/hyper-1.9.0" }
hyper-util = { path = "vendor/hyper-util-0.1.20" }
axum = { path = "vendor/axum-0.8.9" }
axum-core = { path = "vendor/axum-core-0.5.6" }
base64 = { path = "vendor/base64-0.22.1" }
bincode = { path = "vendor/bincode-1.3.3" }
http = { path = "vendor/http-1.4.0" }
http-body = { path = "vendor/http-body-1.0.1" }
http-body-util = { path = "vendor/http-body-util-0.1.3" }
httpdate = { path = "vendor/httpdate-1.0.3" }
ipnet = { path = "vendor/ipnet-2.12.0" }
tower = { path = "vendor/tower-0.5.3" }
tower-layer = { path = "vendor/tower-layer-0.3.3" }
tower-http = { path = "vendor/tower-http-0.6.9" }
tower-service = { path = "vendor/tower-service-0.3.3" }
want = { path = "vendor/want-0.3.1" }
matchit = { path = "vendor/matchit-0.8.4" }
mime = { path = "vendor/mime-0.3.17" }
ndarray-rand = { path = "vendor/ndarray-rand-0.14.0" }
rand = { path = "vendor/rand-0.8.6" }
rand_distr = { path = "vendor/rand_distr-0.4.3" }
serde_path_to_error = { path = "vendor/serde_path_to_error-0.1.20" }
tokio-tungstenite = { path = "vendor/tokio-tungstenite-0.29.0" }
tungstenite = { path = "vendor/tungstenite-0.29.0" }
reqwest = { path = "vendor/reqwest-0.13.3" }
kurbo = { path = "vendor/kurbo-0.11.3" }
svgtypes = { path = "vendor/svgtypes-0.15.3" }
xmlwriter = { path = "vendor/xmlwriter-0.1.0" }
crc32fast = { path = "vendor/crc32fast-1.5.0" }
embedded-websocket = { path = "vendor/embedded-websocket-0.9.4" }
embassy-time = { path = "vendor/embassy-time-0.5.1" }
aarch64-cpu = { path = "vendor/aarch64-cpu-10.0.0" }
lazy_static = { path = "vendor/lazy_static-1.5.0" }
rustls-rustcrypto = { path = "vendor/rustls-rustcrypto-0.0.2-alpha" }
crab-usb = { path = "vendor/crab-usb-0.6.2/crab-usb-0.6.2" }
tokio = { path = "vendor/tokio-1.52.1" }
tokio-util = { path = "vendor/tokio-util-0.7.18" }
tokio-rustls = { path = "vendor/tokio-rustls-0.26.4" }
mio = { path = "vendor/mio-1.2.0" }
nix = { path = "vendor/nix-0.28.0" }
rustix = { path = "vendor/rustix-1.1.4" }
socket2 = { path = "vendor/socket2-0.6.3" }
getrandom = { path = "vendor/getrandom-0.2.17" }
rustyline = { path = "vendor/rustyline-14.0.0" }
dma-api = { path = "vendor/dma-api-0.7.2" }
half = { path = "vendor/half-2.7.1" }
fontdue = { path = "vendor/fontdue-0.9.3" }
petgraph = { path = "vendor/petgraph-0.8.3" }
smoltcp = { path = "vendor/smoltcp-0.13.1" }
xhci = { path = "vendor/xhci-0.9.2" }
aml = { path = "vendor/aml-0.16.4" }
zune-core = { path = "vendor/zune-core-0.5.1" }
zune-jpeg = { path = "vendor/zune-jpeg-0.5.15" }
