[package]
name = "quickjs-sys"
version = "0.1.0"
edition = "2021"
links = "quickjs"
build = "build.rs"

[lib]
name = "quickjs_sys"
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
trueos-math = { path = "../trueos-math", default-features = false, optional = true }

[features]
default = []

# TRUEOS-only helpers (kernel logging via trueos_cabi_write + Complex-backed module smoke).
trueos = ["dep:trueos-math"]
