[package]
name = "trueos-kibi"
description = "A text editor in less than 1024 lines of code with syntax highlighting, search and more."
version = "0.3.3"
rust-version = "1.95"
authors = ["Ilaï Deutel"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/ilai-deutel/kibi"
publish = false
autobins = false

[lib]
path = "src/lib.rs"

[features]
default = []
host-terminal = []
trueos = []

[dependencies]
trueos-io = { path = "../trueos-io" }
tokio = { path = "../../vendor/tokio-1.52.3", default-features = false, features = ["time"] }
v = { path = "../trueos-v" }
unicode-width = "0.2.2"
