[package]
name = "trueos-qjs"
version = "0.1.0"
edition = "2024"
links = "quickjs"
build = "build.rs"

[lib]
name = "trueos_qjs"
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
spin = "0.10"
embassy-time-driver = { version = "0.2.1", default-features = false, optional = true }
embassy-executor = { version = "0.9.1", default-features = false, optional = true, features = ["executor-thread", "arch-spin"] }
embassy-time = { version = "0.5.0", default-features = false, optional = true, features = ["tick-hz-1_000"] }
libm = { version = "0.2", default-features = false, optional = true }
trueos-math = { path = "../trueos-math", default-features = false, optional = true }
trueos-weather = { path = "../trueos-weather", default-features = false, optional = true }

[features]
default = []

# TRUEOS-only helpers (kernel logging via trueos_cabi_write + Complex-backed module smoke).
trueos = ["dep:trueos-math", "dep:trueos-weather", "dep:embassy-time-driver", "dep:embassy-executor", "dep:embassy-time", "dep:libm"]
