[package]
name = "trueos-qjs"
version = "0.1.0"
edition = "2024"
links = "quickjs"
build = "build.rs"

[lib]
name = "trueos_qjs"
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
spin = "0.10"
embassy-time-driver = { version = "0.2.2", default-features = false, optional = true }
embassy-executor = { version = "0.10.0", default-features = false, optional = true, features = ["executor-thread", "platform-spin"] }
embassy-time = { version = "0.5.1", default-features = false, optional = true, features = ["tick-hz-1_000"] }
embassy-sync = { version = "0.8.0", default-features = false, optional = true }
libm = { version = "0.2", default-features = false, optional = true }
v = { path = "../trueos-v", default-features = false }
trueos-math = { path = "../trueos-math", default-features = false, optional = true }
trueos-locale = { path = "../trueos-locale", default-features = false, optional = true }
lightningcss = { version = "1.0.0-alpha.70", default-features = false, optional = true }
usvg = { version = "0.45.1", default-features = false }
parry2d = { version = "0.26", default-features = false, features = ["dim2", "f32"], optional = true }

[features]
default = []
lightningcss-native = ["dep:lightningcss"]

# TRUEOS-only helpers (kernel logging via trueos_cabi_write + Complex-backed module smoke).
trueos = ["dep:trueos-math", "dep:trueos-locale", "dep:embassy-time-driver", "dep:embassy-executor", "dep:embassy-time", "dep:embassy-sync", "dep:libm", "dep:parry2d"]

[patch.crates-io]
embassy-time = { path = "../../vendor/embassy-time-0.5.1-trueos" }
num-traits = { path = "../../vendor/num-traits-0.2.19" }
imagesize = { path = "../../vendor/imagesize-0.13.0" }
kurbo = { path = "../../vendor/kurbo-0.11.3" }
svgtypes = { path = "../../vendor/svgtypes-0.15.3" }
xmlwriter = { path = "../../vendor/xmlwriter-0.1.0" }
crc32fast = { path = "../../vendor/crc32fast-1.5.0" }
