[package]
name = "v"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
spin = "0.10"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []
