[package]
name = "trueos-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
libm = { version = "0.2", default-features = false }
