[package]
name = "amble_data"
version = "0.66.0"
description = "Shared data model used by amble_engine and amble_script for the Amble game engine."
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
