[package]
name = "amble_script"

version = "0.67.0-alpha"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Authoring-focused DSL, parser, and compiler that produces Amble engine WorldDef data."
keywords = ["dsl", "parser", "compiler", "interactive-fiction", "cli"]
categories = ["compilers", "parsing", "command-line-utilities"]

[lib]
name = "amble_script"
path = "src/lib.rs"

[[bin]]
name = "amble_script"
path = "src/main.rs"

[dependencies]
amble_data = { version = "0.66.0", path = "../amble_data" }
pest = "2"
pest_derive = "2"
ron = "0.10.1"
thiserror = "1"
