[package]
name = "xtask"
description = "Building and packaging automations for the Amble game engine."
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
cargo_metadata = "0.18.1"
clap = { version = "4.5.21", features = ["derive"] }
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
semver = "1.0"
toml_edit = "0.21"
