[package]
name = "file-explorer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = "0.8"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
